cleaned up view with breaks

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Nearest Stations</h1>
 <% @stations.each do |station| %>
-  <%= station.name %>
-  <%= station.address %>
-  <%= station.fuel_type %>
-  <%= station.distance %>
-  <%= station.access_times %>
+  <%= station.name %><br/>
+  <%= station.address %><br/>
+  <%= station.fuel_type %><br/>
+  <%= station.distance %><br/>
+  <%= station.access_times %><br/><br/>
 <% end %>
